# connect4

./: .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: .coveragerc  ai.py  main.py
src/ai/: ai.py
src/services/: matrix.py
src/tests/: test_ai.py  test_matrix.py
src/ui/: gameview.py
