[tool.poetry]
name = "connectfour"
version = "0.1.0"
description = ""
authors = ["Iris <iris.perttuli@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
cowsay = "^6.1"
pygame = "^2.6.1"



[tool.poetry.group.dev.dependencies]
invoke = "^3.0.3"
coverage = "^7.14.1"
pytest = "^9.0.3"
pylint = "^4.0.5"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
